--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 .data-hora{
     text-align: center;
 }
+#btn-bate-ponto{
+    text-align: center;
+}
+#dialog-ponto{
+    text-align: calc();
+
+}
+
