--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,19 @@
     top: 0;
     right: 0;
 }
+#alerta-registro-ponto{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #ccc;
+    color: white;
+    opacity: 0;
+
+}
+.hidden{
+    opacity: 0;
+}
+.show {
+    opacity: 1;
+}
