--- a/css/style.css
+++ b/css/style.css
@@ -40,13 +40,13 @@ body{
   }
   
   .button a{
-    color:white;
+    color:black;
     font-family:Helvetica, sans-serif;
     font-weight:bold;
     font-size:36px;
     text-align: center;
     text-decoration:none;
-    background-color:#FFA12B;
+    background-color:#1d1fa8;
     display:block;
     position:relative;
     padding:20px 40px;
@@ -66,7 +66,7 @@ body{
   
   .button a:active{
     top:10px;
-    background-color:#F78900;
+    background-color:white;
     
     -webkit-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
     -moz-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3pxpx 0 #915100;
