--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,9 @@ body{
     text-shadow: 0px 1px 0px #000;
     filter: dropshadow(color=#000, offx=0px, offy=1px);
     
-    -webkit-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
-    -moz-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
-    box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
+    -webkit-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #30839f;
+    -moz-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #30839f;
+    box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #30839f;
     
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -68,9 +68,9 @@ body{
     top:10px;
     background-color:white;
     
-    -webkit-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
-    -moz-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3pxpx 0 #915100;
-    box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
+    -webkit-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #62b4cf;
+    -moz-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3pxpx 0 #62b4cf;
+    box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #62b4cf;
   }
   
   .button:after{
